# trigger_tree

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  SKILL.md  action.yml  demo-report.html  docs-discoverability.json  docs-health.json  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  robots.txt  sitemap.xml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: plugin_install_smoke.py  release_integrity.py  release_notes.py
.github/workflows/: ci.yml
.trigger-tree/: config.sh  gate.json
codex-skills/trigger-tree/: SKILL.md
docs/: README.md  ci-gate.md  configuration.md  dashboard.md  development.md  faq.md  glossary.md  heat-model.md  platform-support.md  privacy.md  structuring-docs.md
docs/assets/: demo.tape  make_demo_report.py
examples/: github-actions.yml  gitlab-ci.yml
hooks/: claude-hooks.json  hooks.json
scripts/: tt-codex-hook.py  tt-config.sh  tt-doctor.py  tt-gate.py  tt-log.py  tt-log.sh  tt-open.sh  tt-publish-badge.sh  tt-report.py  tt-setup.py  tt-shell-capture.sh  tt-stats.py  tt-statusline.py  tt-statusline.sh  tt-suggestions.py  tt-tips.py  tt-uninstall.py  tt-watch.py  tt_runtime.py  tt_scope.py  validate_palette.js
skills/trigger-tree/: SKILL.md
skills/tt/: SKILL.md
tests/: conftest.py  smoke.py  test_cli.py  test_codex_adapter.py  test_codex_package.py  test_doctor.py  test_gate.py  test_hooks.py  test_live_e2e.py  test_log.py  test_open.py  test_release_integrity.py  test_release_notes.py  test_report.py  test_setup.py  test_site.py  test_stats.py  test_statusline.py  test_suggestions.py  test_tips.py  test_uninstall.py  test_watch.py
trigger_tree/: __init__.py  cli.py
(+39 files in other folders)
